--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,10 @@ nav a {
   color: white;
   margin-right: 1rem;
   text-decoration: none;
-  font-size: clamp(0.9rem, 1.2vw, 1.1rem);
+  /* رفع الحد الأدنى من 0.9rem إلى 1rem */
+  font-size: clamp(1rem, 1.2vw, 1.3rem);
 }
+
 
 nav a:hover {
   text-decoration: underline;
