--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header {
 header h1 {
   font-size: 24px;
   margin: 0;
+  color: red ;
 }
 
 nav {
@@ -36,7 +37,7 @@ nav {
 nav a {
   color: white;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 25px;
 }
 
 nav a:hover {
