--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body {
   }
   .promo-admin img {
     width: 30%;
-    max-height:100%;
+    height:100%;
     object-fit: cover;
     filter: brightness(0.7);
   }
